# fhr-monitor-ai

./: .gitignore  Cargo.toml  README.md  TLDR_README.md  pyproject.toml
.github/workflows/: ci.yml  publish-python.yml  publish-testpypi.yml
docs/: alerting_strategy.md  architecture.md  data_contract.md  python_library_plan.md  request.schema.json
examples/: Untitled.ipynb  demo_monitor.csv  fhr_monitor_analyzer_demo.ipynb
python/fhr_monitor_analyzer/: __init__.py  plotting.py
scripts/: plot_monitor_csv.py
src/: lib.rs  main.rs  python.rs
src/fhr_core/: analysis.rs  csv_input.rs  json_input.rs  mod.rs  model.rs  time.rs
test_data/: t1.csv  t2.csv  t3.csv  t4.csv  t5.csv  t6-ph.csv
tests/python/: test_python_api.py
