[package]
name = "fhr-monitor-analyzer"
version = "0.1.4"
edition = "2024"

[lib]
name = "fhr_monitor_analyzer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["dep:pyo3", "pyo3/extension-module", "pyo3/abi3-py39"]

[dependencies]
pyo3 = { version = "0.23", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "fhr-monitor-analyzer-cli"
path = "src/main.rs"
